--- a/reddit/templates/reddit/search.html
+++ b/reddit/templates/reddit/search.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
 
@@ -9,8 +9,8 @@
         <div class="card-body">
             <form action="{% url 'reddit:search' %}" method="post">
                 {% csrf_token %}
-                {{ form }}
-                <input type="submit" value="Search">
+                {{ form|crispy }}
+                <input class="btn btn-primary" type="submit" value="Search">
             </form>
         </div>
     </div>
