--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}ScheduleCU{% endblock title %}</title>
+    <title>{% block title %}PostGold{% endblock title %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'PUT IMAGE HERE' %}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
