--- a/templates/base.html
+++ b/templates/base.html
@@ -37,20 +37,20 @@
 <body>
 
     <div class="mb-3">
-        <nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+        <nav class="navbar navbar-expand-md navbar-light bg-dark" id="navbar">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand text-light" href="#">
                 Postgold
             </a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reddit:search' %}">Reddit</a>
+                        <a class="nav-link text-light" href="{% url 'reddit:search' %}">Reddit</a>
                     </li>
                 </ul>
             </div>
@@ -59,11 +59,11 @@
     </div>
 
 
-    <nav class="navbar fixed-bottom" id="schedulecu_footer">
+    <nav class="navbar fixed-bottom bg-dark" id="schedulecu_footer">
         <div class="row mx-auto">
             <span>
-                <a class="navbar-brand text-light" href="https://github.com/jacobfelknor/schedulecu" target="_blank">
-                    © 2019 Jacob Felknor &nbsp; &mdash; &nbsp; Version 0.0.1
+                <a class="navbar-brand text-light" href="https://github.com/jacobfelknor/HackCU2020" target="_blank">
+                    PostGold &nbsp; &mdash; &nbsp; Version 0.0.1
                 </a>
             </span>
         </div>
