--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{% url 'twitter:search' %}">Twitter</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'speeches:choose' %}">Speeches</a>
+                    </li>
                 </ul>
             </div>
         </nav>
