--- a/reddit/templates/reddit/results.html
+++ b/reddit/templates/reddit/results.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="card">
-        <h3 class="card-header">Results</h3>
+        <h3 class="card-header">Results for r/{{ subreddit }}</h3>
         <div class="card-body">
             {% for result in results %}
             {{ result }}
