--- a/reddit/templates/reddit/search.html
+++ b/reddit/templates/reddit/search.html
@@ -12,6 +12,10 @@
                 {{ form|crispy }}
                 <input class="btn btn-primary" type="submit" value="Search">
             </form>
+            <ul>
+                <li>Examples:</li>
+                <li>whatstheword</li>
+            </ul>
         </div>
     </div>
 </div>
