--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand text-light" href="#">
+            <a class="navbar-brand text-light" href="{% url 'home' %}">
                 Postgold
             </a>
 
