--- a/speeches/templates/speeches/pick.html
+++ b/speeches/templates/speeches/pick.html
@@ -9,6 +9,7 @@
         </h3>
         <div class="card-body">
             <a href="{% url 'speeches:obama' %}"><button class="btn btn-dark">Obama</button></a>
+            <a href="{% url 'speeches:lincoln' %}"><button class="btn btn-dark">Lincoln</button></a>
         </div>
     </div>
 </div>
